Fix width of number input on mobile

--- a/resources/sass/_number-input.scss
+++ b/resources/sass/_number-input.scss
@@ -1,3 +1,3 @@
-.number {
-    max-width: 10em;
+.number-input {
+    width: 10em;
 }
